imagem para web

--- a/envelope.html
+++ b/envelope.html
@@ -12,7 +12,7 @@
                 <div class="cover bottom right" id="envelopeBottomRight"></div>
                 <div class="cover left" id="envelopeLeft"></div>
                 <div class="letter" id="contact">
-                    <h1><img class="paper" id="paper" src="assets/convite.jpeg" /> </h1>
+                    <h1><img class="paper" id="paper" src="assets/Convite.png" /> </h1>
                 </div>
             </div>
         </div>
